--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SM Digital</title>
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/img/headlogo.png">
-  <link rel="stylesheet" href="/code/style.css">
+  <link rel="icon" type="image/png" href="headlogo.png">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <!-- Header -->
   <header>
     <nav class="nav-links">
-      <a href="#"><img src="/img/logo.png" alt=""></a>
+      <a href="#"><img src="logo.png" alt=""></a>
       <a href="#">Home</a>
       <a href="#">Store</a>
       <a href="#">Service</a>
@@ -23,13 +23,13 @@
 
   <!-- Banner -->
   <div class="banner-top">
-    <img src="/img/banner.jpg" alt="Banner">
+    <img src="banner.jpg" alt="Banner">
   </div>
   <!-- Product Grid -->
   <div class="box">
     <div class="item best-seller">
       <span class="badge-seller">Best Seller</span>
-      <img src="/img/p1.jpg">
+      <img src="p1.jpg">
       <div class="info">
       <h3>Canva Pro Premium</h3>
       <p>SM Digital <span style="color: rgb(203, 203, 203);">|</span>
@@ -40,7 +40,7 @@
 
     <div class="item best-seller">
       <span class="badge-seller">Best Seller</span>
-      <img src="/img/p2.jpg">
+      <img src="p2.jpg">
       <div class="info">
       <h3>ChatGPT Plus</h3>
       <p>SM Digital <span style="color: rgb(203, 203, 203);">|</span>
@@ -50,7 +50,7 @@
     </div>
 
     <div class="item">
-      <img src="/img/p3.jpg">
+      <img src="p3.jpg">
       <div class="info">
       <h3>Window11 Pro</h3>
       <p>SM Digital <span style="color: rgb(203, 203, 203);">|</span>
@@ -60,7 +60,7 @@
     </div>
 
     <div class="item">
-      <img src="/img/p5.jpg">
+      <img src="p5.jpg">
       <div class="info">
       <h3>Netflix Premium</h3>
       <p>SM Digital <span style="color: rgb(203, 203, 203);">|</span>
@@ -70,7 +70,7 @@
     </div>
 
     <div class="item">
-      <img src="/img/p4.jpg">
+      <img src="p4.jpg">
       <div class="info">
       <h3>Creative Cloud Pro</h3>
       <p>SM Digital <span style="color: rgb(203, 203, 203);">|</span>
@@ -80,7 +80,7 @@
     </div>
 
     <div class="item">
-      <img src="/img/p6.jpg" alt="iPhone 15 Promax">
+      <img src="p6.jpg" alt="iPhone 15 Promax">
       <div class="info">
         <h3>iPhone 15 Promax</h3>
         <p>Used • ពោធិ៍សាត់, ភ្នំពេញ</p>
@@ -89,7 +89,7 @@
     </div>
 
     <div class="item">
-      <img src="/img/p7.jpg" alt="iPhone 15 Promax">
+      <img src="p7.jpg" alt="iPhone 15 Promax">
       <div class="info">
         <h3>iPhone 15 Promax</h3>
         <p>Used • ពោធិ៍សាត់, ភ្នំពេញ</p>
@@ -98,7 +98,7 @@
     </div>
 
     <div class="item">
-      <img src="/img/p8.jpg" alt="iPhone 15 Promax">
+      <img src="p8.jpg" alt="iPhone 15 Promax">
       <div class="info">
         <h3>iPhone 15 Promax</h3>
         <p>Used • ពោធិ៍សាត់, ភ្នំពេញ</p>
