--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
   </div>
   <!-- Product Grid -->
   <div class="box">
-    <div class="item best-seller">
-      <span class="badge-seller">Best Seller</span>
+    <div class="item">
       <img src="p1.jpg">
       <div class="info">
       <h3>Canva Pro Premium</h3>
@@ -38,8 +37,7 @@
       </div>
     </div>
 
-    <div class="item best-seller">
-      <span class="badge-seller">Best Seller</span>
+    <div class="item">
       <img src="p2.jpg">
       <div class="info">
       <h3>ChatGPT Plus</h3>
@@ -72,37 +70,40 @@
     <div class="item">
       <img src="p4.jpg">
       <div class="info">
-      <h3>Creative Cloud Pro</h3>
+      <h3>Googlr Drive 2TB</h3>
       <p>SM Digital <span style="color: rgb(203, 203, 203);">|</span>
       គម្រោងប្រចាំខែ</p>
-      <span>$5.99</span>
+      <span>$4.99</span>
       </div>
     </div>
 
     <div class="item">
       <img src="p6.jpg" alt="iPhone 15 Promax">
       <div class="info">
-        <h3>iPhone 15 Promax</h3>
-        <p>Used • ពោធិ៍សាត់, ភ្នំពេញ</p>
-        <span>$760</span>
+        <h3>YouTube Premium</h3>
+        <p>SM Digital <span style="color: rgb(203, 203, 203);">|</span>
+      គម្រោងមួយឆ្នាំ</p>
+        <span>$20.00</span>
       </div>
     </div>
 
     <div class="item">
       <img src="p7.jpg" alt="iPhone 15 Promax">
       <div class="info">
-        <h3>iPhone 15 Promax</h3>
-        <p>Used • ពោធិ៍សាត់, ភ្នំពេញ</p>
-        <span>$760</span>
+        <h3>Adobe Creative Cloud Pro</h3>
+        <p>SM Digital <span style="color: rgb(203, 203, 203);">|</span>
+      គម្រោង៣ខែ</p>
+        <span>$9.99</span>
       </div>
     </div>
 
     <div class="item">
       <img src="p8.jpg" alt="iPhone 15 Promax">
       <div class="info">
-        <h3>iPhone 15 Promax</h3>
-        <p>Used • ពោធិ៍សាត់, ភ្នំពេញ</p>
-        <span>$760</span>
+        <h3>Microsoft Office 365</h3>
+        <p>SM Digital <span style="color: rgb(203, 203, 203);">|</span>
+      គម្រោងមួយឆ្នាំ</p>
+        <span>$12</span>
       </div>
     </div>
   </div>
