--- a/index.html
+++ b/index.html
@@ -101,10 +101,16 @@
       <img src="p8.jpg" alt="iPhone 15 Promax">
       <div class="info">
         <h3>Microsoft Office 365</h3>
-        <p>SM Digital <span style="color: rgb(203, 203, 203);">|</span>
+        <p>SM Digital <span style="color: rgb(0, 157, 255);">|</span>
       គម្រោងមួយឆ្នាំ</p>
-        <span>$12</span>
+        <span>$20.00</span>
       </div>
+    </div>
+
+    <div style="padding: 4px 1px; background-color: rgb(0, 145, 255); border-radius: 50px; color: aliceblue;">
+      <center>
+        <a href="https://t.me/smservicekh" style="width: 50px;height: 50px; background-color: rgb(0, 145, 255); border-radius: 50px; color: aliceblue; text-decoration: none; margin-top: 10px; height: 20px;">ទំនាក់ទំនង</a>
+      </center>
     </div>
   </div>
   
