--- a/index.html
+++ b/index.html
@@ -1,118 +1,149 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="km">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SM Digital</title>
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="headlogo.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
+
   <!-- Header -->
   <header>
-    <nav class="nav-links">
-      <a href="#"><img src="logo.png" alt=""></a>
-      <a href="#">Home</a>
-      <a href="#">Store</a>
-      <a href="#">Service</a>
-      <a href="#">Contact Us</a>
-    </nav>
+    <div class="header-left">
+      <img src="logo.png" alt="Logo" />
+
+      <div class="search-box">
+        <img src="search-icon.png" alt="Search" class="search-icon">
+        <input type="text" placeholder="ស្វែងរកក្នុង SM Digital" />
+      </div>
+
+    </div>
+    <div class="header-center">
+      <button class="tool-btn active" data-panel="home">
+        <img src="home.png" alt="Home" />
+      </button>
+      <button class="tool-btn" data-panel="store">
+        <img src="store.png" alt="Store" />
+      </button>
+      <button class="tool-btn" data-panel="service">
+        <img src="service.png" alt="Service" />
+      </button>
+    </div>
+    <div class="header-right">
+      <div class="icon-setting"></div>
+    </div>
   </header>
 
-  <!-- Banner -->
-  <div class="banner-top">
-    <img src="banner.jpg" alt="Banner">
-  </div>
-  <!-- Product Grid -->
-  <div class="box">
-    <div class="item">
-      <img src="p1.jpg">
-      <div class="info">
-      <h3>Canva Pro Premium</h3>
-      <p>SM Digital <span style="color: rgb(203, 203, 203);">|</span>
-      គម្រោងមួយឆ្នាំ</p>
-      <span>$5.00</span>
-      </div>
-    </div>
-
-    <div class="item">
-      <img src="p2.jpg">
-      <div class="info">
-      <h3>ChatGPT Plus</h3>
-      <p>SM Digital <span style="color: rgb(203, 203, 203);">|</span>
-      គម្រោងមួយខែ</p>
-      <span>$5.00</span>
-      </div>
-    </div>
-
-    <div class="item">
-      <img src="p3.jpg">
-      <div class="info">
-      <h3>Window11 Pro</h3>
-      <p>SM Digital <span style="color: rgb(203, 203, 203);">|</span>
-      គម្រោងមួយជីវិត</p>
-      <span>$5.00</span>
-      </div>
-    </div>
-
-    <div class="item">
-      <img src="p5.jpg">
-      <div class="info">
-      <h3>Netflix Premium</h3>
-      <p>SM Digital <span style="color: rgb(203, 203, 203);">|</span>
-      គម្រោងប្រចាំខែ</p>
-      <span>$2.50</span>
-      </div>
-    </div>
-
-    <div class="item">
-      <img src="p4.jpg">
-      <div class="info">
-      <h3>Googlr Drive 2TB</h3>
-      <p>SM Digital <span style="color: rgb(203, 203, 203);">|</span>
-      គម្រោងប្រចាំខែ</p>
-      <span>$4.99</span>
-      </div>
-    </div>
-
-    <div class="item">
-      <img src="p6.jpg" alt="iPhone 15 Promax">
-      <div class="info">
-        <h3>YouTube Premium</h3>
-        <p>SM Digital <span style="color: rgb(203, 203, 203);">|</span>
-      គម្រោងមួយឆ្នាំ</p>
-        <span>$20.00</span>
-      </div>
-    </div>
-
-    <div class="item">
-      <img src="p7.jpg" alt="iPhone 15 Promax">
-      <div class="info">
-        <h3>Adobe Creative Cloud Pro</h3>
-        <p>SM Digital <span style="color: rgb(203, 203, 203);">|</span>
-      គម្រោង៣ខែ</p>
-        <span>$9.99</span>
-      </div>
-    </div>
-
-    <div class="item">
-      <img src="p8.jpg" alt="iPhone 15 Promax">
-      <div class="info">
-        <h3>Microsoft Office 365</h3>
-        <p>SM Digital <span style="color: rgb(0, 157, 255);">|</span>
-      គម្រោងមួយឆ្នាំ</p>
-        <span>$20.00</span>
-      </div>
-    </div>
-
-    <div style="padding: 4px 1px; background-color: rgb(0, 145, 255); border-radius: 50px; color: aliceblue;">
-      <center>
-        <a href="https://t.me/smservicekh" style="width: 50px;height: 50px; background-color: rgb(0, 145, 255); border-radius: 50px; color: aliceblue; text-decoration: none; margin-top: 10px; height: 20px;">ទំនាក់ទំនង</a>
-      </center>
+  <!-- Panels -->
+  <div class="panel-container">
+    <!-- Panel 1: Home -->
+    <div class="panel active" id="home">
+      <div class="banner-top">
+      <!-- Overlay Text -->
+      <div class="video-text">
+      <h2 style="text-align: center; font-size: 90px; font-family: 'Khala mid'; letter-spacing: 0.3px; color: rgb(0, 110, 255);">Welcome to SM Digital</h2>
     </div>
   </div>
+</div>
+
+
+
+    <div class="panel-container">
+  <div id="overlay"></div>
+    <!-- Panel 2: Store -->
+    <div class="panel" id="store">
+      <div class="banner-top">
+        <!-- <img src="service-banner.jpg" alt="Store Banner" /> -->
+      </div>
+      <div class="box">
+        <div class="item">
+          <img src="p1.jpg" alt="Canva Pro Premium">
+          <div class="info">
+            <h3>Canva Pro Premium</h3>
+            <p>SM Digital <span>|</span> គម្រោងមួយឆ្នាំ</p>
+            <span>$4.99</span>
+          </div>
+        </div>
+        <div class="item">
+          <img src="p2.jpg" alt="ChatGPT Plus">
+          <div class="info">
+            <h3>ChatGPT Plus</h3>
+            <p>SM Digital <span>|</span> គម្រោងមួយខែ</p>
+            <span>$4.99</span>
+          </div>
+        </div>
+        <div class="item">
+          <img src="p3.jpg" alt="Windows 11 Pro">
+          <div class="info">
+            <h3>Windows 11 Pro</h3>
+            <p>SM Digital <span>|</span> គម្រោងមួយជីវិត</p>
+            <span>$4.99</span>
+          </div>
+        </div>
+        <div class="item">
+          <img src="p5.jpg" alt="Netflix Premium">
+          <div class="info">
+            <h3>Netflix Premium</h3>
+            <p>SM Digital <span>|</span> គម្រោងប្រចាំខែ</p>
+            <span>$2.50</span>
+          </div>
+        </div>
+        <div class="item">
+          <img src="p4.jpg" alt="Google Drive 2TB">
+          <div class="info">
+            <h3>Google Drive 2TB</h3>
+            <p>SM Digital <span>|</span> គម្រោងប្រចាំខែ</p>
+            <span>$4.99</span>
+          </div>
+        </div>
+        <div class="item">
+          <img src="p6.jpg" alt="YouTube Premium">
+          <div class="info">
+            <h3>YouTube Premium</h3>
+            <p>SM Digital <span>|</span> គម្រោងមួយឆ្នាំ</p>
+            <span>$20.00</span>
+          </div>
+        </div>
+        <div class="item">
+          <img src="p7.jpg" alt="Adobe Creative">
+          <div class="info">
+            <h3>Adobe Creative</h3>
+            <p>SM Digital <span>|</span> គម្រោង៣ខែ</p>
+            <span>$9.99</span>
+          </div>
+        </div>
+        <div class="item">
+          <img src="p8.jpg" alt="Microsoft Office 365">
+          <div class="info">
+            <h3>Microsoft Office 365</h3>
+            <p>SM Digital <span>|</span> គម្រោងមួយឆ្នាំ</p>
+            <span>$20.00</span>
+          </div>
+        </div>
+      </div>
+      <div class="contact-btn">
+        <a href="https://t.me/smservicekh">ទំនាក់ទំនង</a>
+      </div>
+    </div>
+
+    <!-- Panel 3: Service -->
+    <div class="panel" id="service">
+      <div class="banner-top">
+        
+      </div>
+      <div class="service-content">
+        <h2 style="color: rgb(0, 102, 255);">Design Service</h2>
+        <p>យើងកំពុងធ្វើបច្ចុប្បន្នភាពលើមុខងារនេះ...</p>
+        <div class="service-images">
+          <!-- <img src="service1.jpg" alt="Service Image 1" />
+          <img src="service2.jpg" alt="Service Image 2" /> -->
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- External JS -->
+  <script src="app.js"></script>
   
-
 </body>
+</html>
