--- a/index.html
+++ b/index.html
@@ -38,13 +38,11 @@
   <!-- Panels -->
   <div class="panel-container">
     <!-- Panel 1: Home -->
-    <div class="panel active" id="home">
-      <div class="banner-top">
-      <!-- Overlay Text -->
-      <div class="video-text">
-      <h2 style="text-align: center; font-size: 90px; font-family: 'Khala mid'; letter-spacing: 0.3px; color: rgb(0, 110, 255);">Welcome to SM Digital</h2>
+    <div class="panel" id="home">
+      <center>
+        <img src="homepage.png" alt="">
+      </center>
     </div>
-  </div>
 </div>
 
 
