--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SM Digital</title>
   <link rel="stylesheet" href="style.css" />
+  <title><img src="logo.png" alt=""></title>
 </head>
 <body>
 
@@ -13,10 +14,10 @@
     <div class="header-left">
       <img src="logo.png" alt="Logo" />
 
-      <div class="search-box">
+      <!-- <div class="search-box">
         <img src="search-icon.png" alt="Search" class="search-icon">
         <input type="text" placeholder="ស្វែងរកក្នុង SM Digital" />
-      </div>
+      </div> -->
 
     </div>
     <div class="header-center">
@@ -39,8 +40,8 @@
   <div class="panel-container">
     <!-- Panel 1: Home -->
     <div class="panel" id="home">
-      <center>
-        <img src="homepage.png" alt="">
+      <center class="text-welcome">
+        <h2>Welcome to SM Digital</h2>
       </center>
     </div>
 </div>
@@ -60,7 +61,7 @@
           <div class="info">
             <h3>Canva Pro Premium</h3>
             <p>SM Digital <span>|</span> គម្រោងមួយឆ្នាំ</p>
-            <span>$4.99</span>
+            <span>$5.00</span>
           </div>
         </div>
         <div class="item">
@@ -76,7 +77,7 @@
           <div class="info">
             <h3>Windows 11 Pro</h3>
             <p>SM Digital <span>|</span> គម្រោងមួយជីវិត</p>
-            <span>$4.99</span>
+            <span>$5.00</span>
           </div>
         </div>
         <div class="item">
@@ -84,7 +85,7 @@
           <div class="info">
             <h3>Netflix Premium</h3>
             <p>SM Digital <span>|</span> គម្រោងប្រចាំខែ</p>
-            <span>$2.50</span>
+            <span>$3.00</span>
           </div>
         </div>
         <div class="item">
