--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <div class="item">
   <img src="p1.jpg" alt="Canva Pro Premium">
   <div class="info">
-    <h3>Canva Pro Premium</h3>
+    <h3>Canva Pro</h3>
     <p><span>$5.00</span> | គម្រោងមួយឆ្នាំ</p>
   </div>
 </div>
@@ -109,7 +109,7 @@
 <div class="item">
   <img src="p8.jpg" alt="Microsoft Office 365">
   <div class="info">
-    <h3>Microsoft Office 365</h3>
+    <h3>Microsoft Office</h3>
     <p><span>$20.00</span> | គម្រោងមួយឆ្នាំ</p>
   </div>
 </div>
