--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
       </div>
 
       <div class="extra-row" id="home1">
+        <div class="extra-box box5">
+          <h2>Resource by Quan</h2>
+          <p>Made from Trusted and sharing. feel free to join.</p>
+          <button class="hero-btn" onclick="window.location.href='https://t.me/resourcebyquan'">
+            Join Now
+          </button>
+        </div>
+
         <div class="extra-box box1">
           <h2>Programer IT-Step</h2>
           <p>Simple practical coding for future developers.</p>
@@ -164,12 +172,57 @@
       </div>
     </div>
 
-    <!-- Panel 3: Service -->
-    <div class="panel" id="service">
-      <div class="service-content">
-        <center>កំពុងអាប់ដេត...</center>
-      </div>
+
+<!-- Panel 3: Service -->
+<div class="panel" id="service">
+
+  <!-- ✅ Banner Carousel -->
+  <div class="service-banner">
+    <div class="banner-track">
+      <img src="banner1.jpg" alt="Banner 1">
+      <img src="banner2.jpg" alt="Banner 2">
+      <img src="banner3.jpg" alt="Banner 3">
+      <!-- ✅ clone images for infinite forward scroll -->
+      <img src="banner1.jpg" alt="Banner 1 clone">
+      <img src="banner2.jpg" alt="Banner 2 clone">
+      <img src="banner3.jpg" alt="Banner 3 clone">
     </div>
+  </div>
+
+  <!-- ✅ Service Grid -->
+  <div class="service-grid">
+    <div class="service-box">
+      <img src="design.png" alt="Service 1" />
+      <p>សេវាកម្មរចនា</p>
+    </div>
+    <div class="service-box">
+      <img src="service2.png" alt="Service 2" />
+      <p>បង្កើតវេបសាយ</p>
+    </div>
+    <div class="service-box">
+      <img src="service3.png" alt="Service 3" />
+      <p>កាត់តវីដេអូ</p>
+    </div>
+    <div class="service-box">
+      <img src="service4.png" alt="Service 4" />
+      <p>កម្មវិធី</p>
+    </div>
+    <div class="service-box">
+      <img src="service5.png" alt="Service 5" />
+      <p>បណ្តាញសង្គម</p>
+    </div>
+    <div class="service-box">
+      <img src="service6.png" alt="Service 6" />
+      <p>ទីផ្សារ</p>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
   </div>
 
   <!-- External JS -->
