--- a/index.html
+++ b/index.html
@@ -173,9 +173,6 @@
     </div>
 
 
-
-
-
 <!-- Panel 3: Service -->
 <div class="panel" id="service">
 
@@ -185,24 +182,22 @@
       <img src="banner1.jpg" alt="Banner 1">
       <img src="banner2.jpg" alt="Banner 2">
       <img src="banner3.jpg" alt="Banner 3">
+      <!-- ✅ clone images for infinite forward scroll -->
+      <img src="banner1.jpg" alt="Banner 1 clone">
+      <img src="banner2.jpg" alt="Banner 2 clone">
+      <img src="banner3.jpg" alt="Banner 3 clone">
     </div>
-  </div>
-  <!-- ✅ Indicators under banner -->
-  <div class="banner-indicators">
-    <span class="dot active"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
   </div>
 
   <!-- ✅ Service Grid -->
   <div class="service-grid">
     <div class="service-box">
       <img src="design.png" alt="Service 1" />
-      <p>ឌីហ្សាញ</p>
+      <p>សេវាកម្មរចនា</p>
     </div>
     <div class="service-box">
       <img src="service2.png" alt="Service 2" />
-      <p>វេបសាយ</p>
+      <p>បង្កើតវេបសាយ</p>
     </div>
     <div class="service-box">
       <img src="service3.png" alt="Service 3" />
@@ -214,7 +209,7 @@
     </div>
     <div class="service-box">
       <img src="service5.png" alt="Service 5" />
-      <p>បណ្តាញ</p>
+      <p>បណ្តាញសង្គម</p>
     </div>
     <div class="service-box">
       <img src="service6.png" alt="Service 6" />
@@ -222,8 +217,6 @@
     </div>
   </div>
 </div>
-
-
 
 
 
