--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
       <img src="service.png" />
     </button>
   </div>
-
-  <!-- ✅ Dark Mode Toggle Button -->
-  <div class="header-right"> <img id="toggleMode" class="mode-btn" src="darkmode.png" alt="Toggle Mode" /> </div>
 </header>
 
 
@@ -176,47 +173,48 @@
 <!-- Panel 3: Service -->
 <div class="panel" id="service">
 
-  <!-- ✅ Banner Carousel -->
-  <div class="service-banner">
-    <div class="banner-track">
-      <img src="banner1.jpg" alt="Banner 1">
-      <img src="banner2.jpg" alt="Banner 2">
-      <img src="banner3.jpg" alt="Banner 3">
-      <!-- ✅ clone images for infinite forward scroll -->
-      <img src="banner1.jpg" alt="Banner 1 clone">
-      <img src="banner2.jpg" alt="Banner 2 clone">
-      <img src="banner3.jpg" alt="Banner 3 clone">
-    </div>
+  <!-- ✅ Banner Random --> <div class="service-banner"> <!-- បង្ហាញតែរូបមួយ random --> <img id="randomBanner" src="" alt="Service Banner"> </div>
+  <!-- ✅ Indicators under banner -->
+  <div class="banner-indicators">
+    <span class="dot active"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
   </div>
 
-  <!-- ✅ Service Grid -->
-  <div class="service-grid">
-    <div class="service-box">
-      <img src="design.png" alt="Service 1" />
-      <p>សេវាកម្មរចនា</p>
-    </div>
-    <div class="service-box">
-      <img src="service2.png" alt="Service 2" />
-      <p>បង្កើតវេបសាយ</p>
-    </div>
-    <div class="service-box">
-      <img src="service3.png" alt="Service 3" />
-      <p>កាត់តវីដេអូ</p>
-    </div>
-    <div class="service-box">
-      <img src="service4.png" alt="Service 4" />
-      <p>កម្មវិធី</p>
-    </div>
-    <div class="service-box">
-      <img src="service5.png" alt="Service 5" />
-      <p>បណ្តាញសង្គម</p>
-    </div>
-    <div class="service-box">
-      <img src="service6.png" alt="Service 6" />
-      <p>ទីផ្សារ</p>
-    </div>
+  <!-- ✅ Last Works Section -->
+<section class="last-works">
+  <div class="works-grid">
+    <img src="t13.jpg" alt="Work 6" loading="lazy">
+    <img src="t1.jpg" alt="Work 1" loading="lazy">
+    <img src="t2.jpg" alt="Work 2" loading="lazy">
+    <img src="t3.jpg" alt="Work 3" loading="lazy">
+    <img src="t4.jpg" alt="Work 4" loading="lazy">
+    <img src="t7.jpg" alt="Work 5" loading="lazy">
+    <img src="t8.jpg" alt="Work 6" loading="lazy">
+    <img src="t9.jpg" alt="Work 4" loading="lazy">
+    <img src="t10.jpg" alt="Work 5" loading="lazy">
+    <img src="t14.jpg" alt="Work 5" loading="lazy">
+    <img src="t6.jpg" alt="Work 6" loading="lazy">
+    <img src="t5.jpg" alt="Work 5" loading="lazy">
+    <img src="t15.jpg" alt="Work 5" loading="lazy">
+    <img src="T16.jpg" alt="Work 6" loading="lazy">
+    <img src="T17.jpg" alt="Work 5" loading="lazy">
+    <img src="T18.jpg" alt="Work 5" loading="lazy">
+    <img src="T19.jpg" alt="Work 5" loading="lazy">
+    <img src="t11.jpg" alt="Work 6" loading="lazy">
+    <img src="t12.jpg" alt="Work 5" loading="lazy">
+
+    
+
+
+    
+    <!-- …ដាក់រូបច្រើនបាន -->
   </div>
+</section>
+
+
 </div>
+
 
 
 
