--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
     <div class="panel" id="store">
       <div class="banner-top"></div>
       <div class="box">
-        <div class="item">
+
+<div class="item">
+  <img src="p10.jpg" alt="CapCut Pro">
+  <div class="info">
+    <h3>Facebook Verify</h3>
+    <p><span>$5.00</span> | គម្រោងមួយខែ</p>
+  </div>
+</div>
+
+<div class="item">
   <img src="p9.jpg" alt="CapCut Pro">
   <div class="info">
     <h3>CapCut Pro</h3>
@@ -119,54 +128,7 @@
 
     <!-- Panel 2: Home -->
     <div class="panel" id="home">
-      <div class="tab1">
-        <section class="hero">
-          <h1>SM Digital Collection</h1>
-          <p>ចំណេញចុងឆ្នាំនេះជាមួយការបញ្ចុះតម្លៃរហូតដល់ 70%</p>
-          <button class="hero-btn" onclick="document.querySelector('[data-panel=store]').click()">
-            Shop
-          </button>
-        </section>
-      </div>
 
-      <div class="extra-row" id="home1">
-        <div class="extra-box box5">
-          <h2>Resource by Quan</h2>
-          <p>Made from Trusted and sharing. feel free to join.</p>
-          <button class="hero-btn" onclick="window.location.href='https://t.me/resourcebyquan'">
-            Join Now
-          </button>
-        </div>
-
-        <div class="extra-box box1">
-          <h2>Programer IT-Step</h2>
-          <p>Simple practical coding for future developers.</p>
-          <button class="hero-btn" onclick="window.location.href='https://t.me/developerkh'">
-            Join Now
-          </button>
-        </div>
-        <div class="extra-box box2">
-          <h2>PNG Stock</h2>
-          <p>Clean PNG assets, ready to use</p>
-          <button class="hero-btn" onclick="window.location.href='https://t.me/khmerpng'">
-            Join Now
-          </button>
-        </div>
-        <div class="extra-box box3">
-          <h2>SM Digital</h2>
-          <p>Get your pro feature license with SM Digital nows.</p>
-          <button class="hero-btn" onclick="window.location.href='https://t.me/smdigitalkh'">
-            Join Now
-          </button>
-        </div>
-        <div class="extra-box box4">
-          <h2>Khmer Software</h2>
-          <p>Get software for your laptop for free and hight security.</p>
-          <button class="hero-btn" onclick="window.location.href='https://t.me/khmer_software'">
-            Join Now
-          </button>
-        </div>
-      </div>
     </div>
 
 
