--- a/index.html
+++ b/index.html
@@ -187,5 +187,10 @@
 
   <!-- External JS -->
   <script src="app.js"></script>
+  <!-- Floating Contact Icon -->
+<a href="https://t.me/smservicekh" target="_blank" class="floating-icon">
+  <img src="telegram.png" alt="Telegram Contact" />
+</a>
+
 </body>
 </html>
