--- a/index.html
+++ b/index.html
@@ -40,31 +40,8 @@
       <div class="banner-top"></div>
       <div class="box">
 
-<div class="item">
-  <img src="p10.jpg" alt="CapCut Pro">
-  <div class="info">
-    <h3>Facebook Verify</h3>
-    <p><span>$5.00</span> | គម្រោងមួយខែ</p>
-  </div>
-</div>
 
-<div class="item">
-  <img src="p9.jpg" alt="CapCut Pro">
-  <div class="info">
-    <h3>CapCut Pro</h3>
-    <p><span>$5.00</span> | គម្រោងមួយខែ</p>
-  </div>
-</div>
-
-<div class="item">
-  <img src="p7.jpg" alt="Adobe Creative">
-  <div class="info">
-    <h3>Adobe Creative</h3>
-    <p><span>$10.00</span> | គម្រោង៣ខែ</p>
-  </div>
-</div>
-
-<div class="item">
+<div class="item product-open" data-product="canva_pro" role="button" tabindex="0">
   <img src="p1.jpg" alt="Canva Pro Premium">
   <div class="info">
     <h3>Canva Pro</h3>
@@ -72,7 +49,32 @@
   </div>
 </div>
 
-<div class="item">
+    <div class="item product-open" data-product="facebook_verify" role="button" tabindex="0">
+        <img src="p10.jpg" alt="Facebook Verify">
+        <div class="info">
+          <h3>Facebook Verify</h3>
+          <p><span>$5.00</span> | គម្រោងមួយខែ</p>
+        </div>
+    </div>
+
+
+<div class="item product-open" data-product="capcut_pro" role="button" tabindex="0">
+  <img src="p9.jpg" alt="CapCut Pro">
+  <div class="info">
+    <h3>CapCut Pro</h3>
+    <p><span>$5.00</span> | គម្រោងមួយខែ</p>
+  </div>
+</div>
+
+<div class="item product-open" data-product="adobe_creative" role="button" tabindex="0">
+  <img src="p7.jpg" alt="Adobe Creative">
+  <div class="info">
+    <h3>Adobe Creative</h3>
+    <p><span>$10.00</span> | គម្រោង៣ខែ</p>
+  </div>
+</div>
+
+<div class="item product-open" data-product="chatgpt_plus" role="button" tabindex="0">
   <img src="p2.jpg" alt="ChatGPT Plus">
   <div class="info">
     <h3>ChatGPT Plus</h3>
@@ -80,7 +82,7 @@
   </div>
 </div>
 
-<div class="item">
+<div class="item product-open" data-product="windows_11_pro" role="button" tabindex="0">
   <img src="p3.jpg" alt="Windows 11 Pro">
   <div class="info">
     <h3>Windows 11 Pro</h3>
@@ -88,7 +90,7 @@
   </div>
 </div>
 
-<div class="item">
+<div class="item product-open" data-product="netflix_premium" role="button" tabindex="0">
   <img src="p5.jpg" alt="Netflix Premium">
   <div class="info">
     <h3>Netflix Premium</h3>
@@ -96,7 +98,7 @@
   </div>
 </div>
 
-<div class="item">
+<div class="item product-open" data-product="google_drive_2tb" role="button" tabindex="0">
   <img src="p4.jpg" alt="Google Drive 2TB">
   <div class="info">
     <h3>Google Drive 2TB</h3>
@@ -104,7 +106,7 @@
   </div>
 </div>
 
-<div class="item">
+<div class="item product-open" data-product="youtube_premium" role="button" tabindex="0">
   <img src="p6.jpg" alt="YouTube Premium">
   <div class="info">
     <h3>YouTube Premium</h3>
@@ -112,7 +114,7 @@
   </div>
 </div>
 
-<div class="item">
+<div class="item product-open" data-product="microsoft_office" role="button" tabindex="0">
   <img src="p8.jpg" alt="Microsoft Office 365">
   <div class="info">
     <h3>Microsoft Office</h3>
@@ -186,9 +188,27 @@
   </div>
 
   <!-- External JS -->
+  
+  <!-- =========================
+       PRODUCT SHEET (ONE TEMPLATE)
+       Same layout for all products, data changes by JS
+       ========================= -->
+  <div class="product-modal" id="productModal" aria-hidden="true">
+    <div class="pm-backdrop" data-close="1" aria-hidden="true"></div>
+
+    <div class="pm-dialog" role="dialog" aria-modal="true" aria-label="Product detail">
+      <button class="pm-close" type="button" aria-label="Close"><span><img src="backicon.png" alt="" style="width: 21px;"></span></button>
+
+      <div class="pm-content">
+        <!-- JS will render product detail here -->
+        <div id="pmContent" class="content-store"></div>
+      </div>
+    </div>
+  </div>
+
   <script src="app.js"></script>
   <!-- Floating Contact Icon -->
-<a href="https://t.me/smservicekh" target="_blank" class="floating-icon">
+<a href="https://t.me/smservicekh" target="_blank" rel="noopener" class="floating-icon">
   <img src="telegram.png" alt="Telegram Contact" />
 </a>
 
