--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <button class="tool-btn" data-panel="store">
       <img src="store.png" />
     </button>
-    <button class="tool-btn" data-panel="home">
+    <!-- <button class="tool-btn" data-panel="home">
       <img src="home.png" />
-    </button>
+    </button> -->
     <button class="tool-btn" data-panel="service">
       <img src="service.png" />
     </button>
