--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
 <div class="item product-open" data-product="canva_pro" role="button" tabindex="0">
-  <img src="p1.jpg" alt="Canva Pro Premium">
+  <img src="Product/p1.jpg" alt="Canva Pro Premium">
   <div class="info">
     <h3>Canva Pro</h3>
     <p><span>$5.00</span> | គម្រោងមួយឆ្នាំ</p>
@@ -50,7 +50,7 @@
 </div>
 
     <div class="item product-open" data-product="facebook_verify" role="button" tabindex="0">
-        <img src="p10.jpg" alt="Facebook Verify">
+        <img src="Product/p10.jpg" alt="Facebook Verify">
         <div class="info">
           <h3>Facebook Verify</h3>
           <p><span>$5.00</span> | គម្រោងមួយខែ</p>
@@ -59,7 +59,7 @@
 
 
 <div class="item product-open" data-product="capcut_pro" role="button" tabindex="0">
-  <img src="p9.jpg" alt="CapCut Pro">
+  <img src="Product/p9.jpg" alt="CapCut Pro">
   <div class="info">
     <h3>CapCut Pro</h3>
     <p><span>$5.00</span> | គម្រោងមួយខែ</p>
@@ -67,7 +67,7 @@
 </div>
 
 <div class="item product-open" data-product="adobe_creative" role="button" tabindex="0">
-  <img src="p7.jpg" alt="Adobe Creative">
+  <img src="Product/p7.jpg" alt="Adobe Creative">
   <div class="info">
     <h3>Adobe Creative</h3>
     <p><span>$10.00</span> | គម្រោង៣ខែ</p>
@@ -75,7 +75,7 @@
 </div>
 
 <div class="item product-open" data-product="chatgpt_plus" role="button" tabindex="0">
-  <img src="p2.jpg" alt="ChatGPT Plus">
+  <img src="Product/p2.jpg" alt="ChatGPT Plus">
   <div class="info">
     <h3>ChatGPT Plus</h3>
     <p><span>$4.99</span> | គម្រោងមួយខែ</p>
@@ -83,7 +83,7 @@
 </div>
 
 <div class="item product-open" data-product="windows_11_pro" role="button" tabindex="0">
-  <img src="p3.jpg" alt="Windows 11 Pro">
+  <img src="Product/p3.jpg" alt="Windows 11 Pro">
   <div class="info">
     <h3>Windows 11 Pro</h3>
     <p><span>$5.00</span> | គម្រោងមួយជីវិត</p>
@@ -91,7 +91,7 @@
 </div>
 
 <div class="item product-open" data-product="netflix_premium" role="button" tabindex="0">
-  <img src="p5.jpg" alt="Netflix Premium">
+  <img src="Product/p5.jpg" alt="Netflix Premium">
   <div class="info">
     <h3>Netflix Premium</h3>
     <p><span>$3.00</span> | គម្រោងប្រចាំខែ</p>
@@ -99,15 +99,15 @@
 </div>
 
 <div class="item product-open" data-product="google_drive_2tb" role="button" tabindex="0">
-  <img src="p4.jpg" alt="Google Drive 2TB">
+  <img src="Product/p4.jpg" alt="Google Drive 2TB">
   <div class="info">
-    <h3>Google Drive 2TB</h3>
+    <h3>GeminiPro Drive 2TB</h3>
     <p><span>$5.00</span> | គម្រោងប្រចាំខែ</p>
   </div>
 </div>
 
 <div class="item product-open" data-product="youtube_premium" role="button" tabindex="0">
-  <img src="p6.jpg" alt="YouTube Premium">
+  <img src="Product/p6.jpg" alt="YouTube Premium">
   <div class="info">
     <h3>YouTube Premium</h3>
     <p><span>$20.00</span> | គម្រោងមួយឆ្នាំ</p>
@@ -115,7 +115,7 @@
 </div>
 
 <div class="item product-open" data-product="microsoft_office" role="button" tabindex="0">
-  <img src="p8.jpg" alt="Microsoft Office 365">
+  <img src="Product/p8.jpg" alt="Microsoft Office 365">
   <div class="info">
     <h3>Microsoft Office</h3>
     <p><span>$20.00</span> | គម្រោងមួយឆ្នាំ</p>
@@ -142,32 +142,49 @@
     <span class="dot"></span>
   </div>
 
+  <div class="text-tab3">
+    <p>ទាំងនេះជាការរចនារបស់យើង</p>
+  </div>
   <!-- ✅ Last Works Section -->
 <section class="last-works">
   <div class="works-grid">
-    <img src="t13.jpg" alt="Work 6" loading="lazy">
-    <img src="t1.jpg" alt="Work 1" loading="lazy">
-    <img src="t2.jpg" alt="Work 2" loading="lazy">
-    <img src="t3.jpg" alt="Work 3" loading="lazy">
-    <img src="t4.jpg" alt="Work 4" loading="lazy">
-    <img src="t7.jpg" alt="Work 5" loading="lazy">
-    <img src="t8.jpg" alt="Work 6" loading="lazy">
-    <img src="t9.jpg" alt="Work 4" loading="lazy">
-    <img src="t10.jpg" alt="Work 5" loading="lazy">
-    <img src="t14.jpg" alt="Work 5" loading="lazy">
-    <img src="t6.jpg" alt="Work 6" loading="lazy">
-    <img src="t5.jpg" alt="Work 5" loading="lazy">
-    <img src="t15.jpg" alt="Work 5" loading="lazy">
-    <img src="T16.jpg" alt="Work 6" loading="lazy">
-    <img src="T17.jpg" alt="Work 5" loading="lazy">
-    <img src="T18.jpg" alt="Work 5" loading="lazy">
-    <img src="T19.jpg" alt="Work 5" loading="lazy">
-    <img src="t11.jpg" alt="Work 6" loading="lazy">
-    <img src="t12.jpg" alt="Work 5" loading="lazy">
+    <img src="Tab3/t6.jpg" alt="Work 5" loading="lazy">
+    <img src="Tab3/T20.jpg" alt="work 20" loading="lazy">
+    <img src="Tab3/t1.jpg" alt="Work 6" loading="lazy">
+    <img src="Tab3/t2.jpg" alt="Work 1" loading="lazy">
+    <img src="Tab3/t3.jpg" alt="Work 2" loading="lazy">
+    <img src="Tab3/t4.jpg" alt="Work 3" loading="lazy">
+    <img src="Tab3/t5.jpg" alt="Work 4" loading="lazy">
+    <img src="Tab3/t8.jpg" alt="Work 6" loading="lazy">
+    <img src="Tab3/t9.jpg" alt="Work 4" loading="lazy">
+    <img src="Tab3/t10.jpg" alt="Work 5" loading="lazy">
+    <img src="Tab3/t14.jpg" alt="Work 5" loading="lazy">
+    <img src="Tab3/t5.jpg" alt="Work 5" loading="lazy">
+    <img src="Tab3/t15.jpg" alt="Work 5" loading="lazy">
+    <img src="Tab3/T16.jpg" alt="Work 6" loading="lazy">
+    <img src="Tab3/T17.jpg" alt="Work 5" loading="lazy">
+    <img src="Tab3/T18.jpg" alt="Work 5" loading="lazy">
+    <img src="Tab3/T19.jpg" alt="Work 5" loading="lazy">
+    <img src="Tab3/t11.jpg" alt="Work 6" loading="lazy">
+    <img src="Tab3/t12.jpg" alt="Work 5" loading="lazy">
 
-    
-
-
+    <img src="Tab3/1 (1).jpg" alt="work 21" loading="lazy">
+    <img src="Tab3/1 (2).jpg" alt="work 22" loading="lazy">
+    <img src="Tab3/1 (3).jpg" alt="work 23" loading="lazy">
+    <img src="Tab3/1 (4).jpg" alt="work 24" loading="lazy">
+    <img src="Tab3/1 (5).jpg" alt="work 25" loading="lazy">
+    <img src="Tab3/1 (6).jpg" alt="work 26" loading="lazy">
+    <img src="Tab3/1 (7).jpg" alt="work 27" loading="lazy">
+    <img src="Tab3/1 (8).jpg" alt="work 28" loading="lazy">
+    <img src="Tab3/1 (9).jpg" alt="work 29" loading="lazy">
+    <img src="Tab3/1 (10).jpg" alt="work 30" loading="lazy">
+    <img src="Tab3/1 (11).jpg" alt="work 31" loading="lazy">
+    <img src="Tab3/1 (12).jpg" alt="work 32" loading="lazy">
+    <img src="Tab3/1 (13).jpg" alt="work 33" loading="lazy">
+    <img src="Tab3/1 (14).jpg" alt="work 34" loading="lazy">
+    <img src="Tab3/1 (15).jpg" alt="work 35" loading="lazy">
+    <img src="Tab3/1 (16).jpg" alt="work 36" loading="lazy">
+    <img src="Tab3/1 (17).jpg" alt="work 37" loading="lazy">
     
     <!-- …ដាក់រូបច្រើនបាន -->
   </div>
