--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 <div class="item product-open" data-product="google_drive_2tb" role="button" tabindex="0">
   <img src="p4.jpg" alt="Google Drive 2TB">
   <div class="info">
-    <h3>GeminiPro Drive 2TB</h3>
-    <p><span>$5.00</span> | គម្រោងប្រចាំខែ</p>
+    <h3>GeminiPro</h3>
+    <p><span>$9.00</span> | គម្រោងមួយឆ្នាំ</p>
   </div>
 </div>
 
