--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
   <!-- ✅ Last Works Section -->
 <section class="last-works">
   <div class="works-grid">
+    <img src="1 (18).jpg" alt="">
     <img src="t6.jpg" alt="Work 5" loading="lazy">
     <img src="T20.jpg" alt="work 20" loading="lazy">
     <img src="t1.jpg" alt="Work 6" loading="lazy">
