--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
   </div>
 
   <div class="header-center">
-    <button class="tool-btn" data-panel="store">
+    <!-- <button class="tool-btn" data-panel="Ai">
+      <img src="Ai.png" />
+    </button> -->
+
+    <!-- <button class="tool-btn" data-panel="store">
       <img src="store.png" />
-    </button>
+    </button> -->
     <!-- <button class="tool-btn" data-panel="home">
       <img src="home.png" />
     </button> -->
@@ -222,10 +226,6 @@
   </div>
 
   <script src="app.js"></script>
-  <!-- Floating Contact Icon -->
-<a href="https://t.me/smservicekh" target="_blank" rel="noopener" class="floating-icon">
-  <img src="telegram.png" alt="Telegram Contact" />
-</a>
 
 </body>
 </html>
