--- a/index.html
+++ b/index.html
@@ -51,15 +51,6 @@
   </div>
 </div>
 
-    <div class="item product-open" data-product="facebook_verify" role="button" tabindex="0">
-        <img src="p10.jpg" alt="Facebook Verify">
-        <div class="info">
-          <h3>Facebook Verify</h3>
-          <p><span>$5.00</span> | គម្រោងមួយខែ</p>
-        </div>
-    </div>
-
-
 <div class="item product-open" data-product="capcut_pro" role="button" tabindex="0">
   <img src="p9.jpg" alt="CapCut Pro">
   <div class="info">
@@ -258,29 +249,25 @@ If you are looking for a reliable digital partner who speaks clearly, works prof
     </div>
 
     <div class="footer-col">
-      <h4>Updating...</h4>
+      <h4>Social Media</h4>
       <ul>
-        <li><a href="/apple-one">Updating...</a></li>
-        <li><a href="/apple-tv">Updating...</a></li>
-        <li><a href="/apple-music">Updating...</a></li>
-        <li><a href="/apple-arcade">Updating...</a></li>
-        <li><a href="/apple-fitness">Updating...</a></li>
-        <li><a href="/apple-news">Updating...</a></li>
-        <li><a href="/apple-podcasts">Updating...</a></li>
-        <li><a href="/apple-books">Updating...</a></li>
-        <li><a href="/app-store">Updating...</a></li>
+        <li><a href="/apple-one">Telegram Channel</a></li>
+        <li><a href="/apple-tv">Facebook Page</a></li>
+        <li><a href="/apple-music">TikTok Account</a></li>
+        <li><a href="/apple-arcade">YouTube Channel</a></li>
+        <li><a href="/apple-fitness">Khmer24.com</a></li>
       </ul>
     </div>
   </div>
 
   <div class="footer-bottom">
     <p>© 2026 SM Digital. All rights reserved.</p>
-    <p>
+    <!-- <p>
       <a href="#">Privacy Policy</a> |
       <a href="#">Terms of Use</a> |
       <a href="#">Legal</a> |
       <a href="#">Site Map</a>
-    </p>
+    </p> -->
     <p>Cambodia</p>
   </div>
 </footer>
