--- a/index.html
+++ b/index.html
@@ -115,6 +115,49 @@
   </div>
 </div>
 
+
+
+
+<div class="item product-open" data-product="microsoft_office" role="button" tabindex="0">
+  <img src="p10.jpg" alt="Microsoft Office 365">
+  <div class="info">
+    <h3>Express VPN</h3>
+    <p><span>$2.5</span> | គម្រោងមួយខែ</p>
+  </div>
+</div>
+
+<div class="item product-open" data-product="microsoft_office" role="button" tabindex="0">
+  <img src="p11.jpg" alt="Microsoft Office 365">
+  <div class="info">
+    <h3>Kaspersky</h3>
+    <p><span>$10.00</span> | គម្រោងមួយឆ្នាំ</p>
+  </div>
+</div>
+
+<div class="item product-open" data-product="microsoft_office" role="button" tabindex="0">
+  <img src="p14.jpg" alt="Microsoft Office 365">
+  <div class="info">
+    <h3>Freepik</h3>
+    <p><span>$10.00</span> | គម្រោងមួយឆ្នាំ</p>
+  </div>
+</div>
+
+<div class="item product-open" data-product="microsoft_office" role="button" tabindex="0">
+  <img src="p12.jpg" alt="Microsoft Office 365">
+  <div class="info">
+    <h3>Microsoft Office</h3>
+    <p><span>$5.00</span> | គម្រោងមួយឆ្នាំ</p>
+  </div>
+</div>
+
+<div class="item product-open" data-product="microsoft_office" role="button" tabindex="0">
+  <img src="p13.jpg" alt="Microsoft Office 365">
+  <div class="info">
+    <h3>Envato Panel</h3>
+    <p><span>$5.00</span> | គម្រោងមួយខែ</p>
+  </div>
+</div>
+
       </div>
     </div>
 
@@ -136,7 +179,7 @@
   <!-- Top Promo: iPad Air -->
   <div class="promo-top">
     <div class="promo-card bg-light1">
-      <h2 class="promo-title">Airpods Pro 2</h2>
+      <h2 class="promo-title">Creative Clouds</h2>
       <p class="promo-desc">Premium design, quality sound and battery. 15USD</p>
       <div class="promo-actions">
         <a href="#" class="promo-btn primary">Learn more</a>
@@ -152,7 +195,7 @@
   <div class="promo-top1">
 
     <div class="promo-card bg-light">
-      <h2 class="promo-title">Air Watch Siri</h2>
+      <h2 class="promo-title">Khmer Premium</h2>
       <p class="promo-desc">This product only for test.</p>
       <div class="promo-actions">
         <a href="#" class="promo-btn primary">Learn more</a>
@@ -205,20 +248,20 @@ If you are looking for a reliable digital partner who speaks clearly, works prof
     <div class="footer-col">
       <h4>License & Software</h4>
       <ul>
-        <li><a href="/mac">Canva Pro</a></li>
-        <li><a href="/iphone">Adobe Creative Cloud</a></li>
-        <li><a href="/ipad">Window11 Pro</a></li>
-        <li><a href="/watch">Google Flow</a></li>
-        <li><a href="/vision">Telegram Premium</a></li>
-        <li><a href="/airpods">Gemini Ai + Cloud 2TB</a></li>
-        <li><a href="/tv-home">YouTube Premium</a></li>
-        <li><a href="/airtag">CapCut Pro</a></li>
-        <li><a href="/accessories">Netflix Premium</a></li>
-        <li><a href="/gift-cards">ExpressVPN</a></li>
-        <li><a href="/gift-cards">Freepik Premium</a></li>
-        <li><a href="/gift-cards">Kaspersky</a></li>
-        <li><a href="/gift-cards">Office 365</a></li>
-        <li><a href="/gift-cards">ChatGPT Plus</a></li>
+        <li><a href="https://t.me/KhmerPremium/8">Canva Pro</a></li>
+        <li><a href="https://t.me/KhmerPremium/728">Adobe Creative Cloud</a></li>
+        <li><a href="https://t.me/KhmerPremium/18">Window11 Pro</a></li>
+        <li><a href="https://t.me/KhmerPremium/20">Google Flow</a></li>
+        <li><a href="https://t.me/KhmerPremium/13">Telegram Premium</a></li>
+        <li><a href="https://t.me/KhmerPremium/732">Gemini Ai + Cloud 2TB</a></li>
+        <li><a href="https://t.me/KhmerPremium/26">YouTube Premium</a></li>
+        <li><a href="https://t.me/KhmerPremium/5">CapCut Pro</a></li>
+        <li><a href="https://t.me/KhmerPremium/19">Netflix Premium</a></li>
+        <li><a href="https://t.me/KhmerPremium/16">ExpressVPN</a></li>
+        <li><a href="https://t.me/KhmerPremium/681">Freepik Premium</a></li>
+        <li><a href="https://t.me/KhmerPremium/14">Kaspersky</a></li>
+        <li><a href="https://t.me/KhmerPremium/25">Office 365</a></li>
+        <li><a href="https://t.me/KhmerPremium/4">ChatGPT Plus</a></li>
       </ul>
     </div>
 
