--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Top-right: single mode toggle icon -->
     <div class="header-right">
       <button id="modeToggle" class="mode-toggle" aria-label="Toggle dark mode" title="Toggle dark mode">
-        <img src="mode.svg" alt="mode" />
+        <img src="mode.png" alt="mode" />
       </button>
     </div>
   </header>
