--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
           <div class="info"><h3>Microsoft Office</h3><p><span>$20.00</span> | គម្រោងមួយឆ្នាំ</p></div>
         </div>
 
+        <div class="item product-open" data-product="microsoft_office" role="button" tabindex="0">
+          <img src="p10.jpg" alt="Microsoft Office 365">
+          <div class="info"><h3>Express VPN</h3><p><span>$20.00</span> | គម្រោងមួយឆ្នាំ</p></div>
+        </div>
+        
+
         <!-- more items if needed -->
       </div>
     </div>
