--- a/index.html
+++ b/index.html
@@ -8,6 +8,214 @@
   <link rel="icon" href="headlogo.png" type="image/png" />
 </head>
 <body>
-សូមអគុណសម្រាប់ការចូលមកកាន់វេបសាយ SM Digital កំឡុងពេលនេះវេបសាយកំពុងធ្វើបច្ចុប្បន្នភាពនិង ទទួលបានបទពិសោធន៍ថ្មីក្នុងពេលឆាប់ៗនេះ
+
+  <!-- Header -->
+  <header>
+    <div class="header-left">
+      <img src="logo.png" alt="Logo" />
+    </div>
+
+    <div class="header-center">
+      <button class="tool-btn" data-panel="home" aria-label="home">
+        <img src="home.png" alt="home" />
+      </button>
+      <button class="tool-btn" data-panel="store" aria-label="store">
+        <img src="websiteicon.png" alt="store" />
+      </button>
+      <button class="tool-btn" data-panel="service" aria-label="service">
+        <img src="serviceicon.png" alt="service" />
+      </button>
+    </div>
+  </header>
+
+  <div id="panelOverlay"></div>
+
+  <div class="panel-container">
+    <div id="overlay"></div>
+
+    <!-- ✅ Panel: Home (Enhanced with Search + Featured Apps) -->
+    <div class="panel" id="home">
+      <div class="home-wrap home-full">
+        <!-- Search Box Section -->
+        <section class="home-search-section">
+          <div class="search-container">
+            <input 
+              type="text" 
+              id="homeSearchInput" 
+              class="search-input" 
+              placeholder="Search Service or License..."
+              aria-label="Search apps and services"
+            />
+            <button class="search-btn" id="homeSearchBtn" type="button" aria-label="Search">
+              <img src="searchicon.png" alt="Search" />
+            </button>
+          </div>
+        </section>
+
+        
+
+        <!-- Featured Apps (5 per row) -->
+        <section class="home-featured-apps">
+          <div class="featured-apps-grid" id="featuredAppsGrid">
+            <!-- Apps populated by JavaScript -->
+          </div>
+        </section>
+
+        <!-- Service Cards (3 columns) -->
+        <section class="home-services">
+
+          <div class="home-cards">
+            <!-- Design -->
+            <article class="home-card-link" role="button" tabindex="0"
+                     data-go-panel="service" data-scroll="#designSection"
+                     aria-label="ទៅកាន់សេវាកម្ម Design">
+              <div class="home-card-media">
+                <img src="design.png" alt="Design Service" loading="lazy">
+              </div>
+              <div class="home-card-body">
+                <p>ឡាយសិនកម្មវិធីលំដាប់ខ្ពស់ ការធានាគុណភាព</p>
+              </div>
+            </article>
+
+            <!-- Video -->
+            <article class="home-card-link" role="button" tabindex="0"
+                     data-go-panel="service" data-scroll="#videoSection"
+                     aria-label="ទៅកាន់សេវាកម្ម Video Editing">
+              <div class="home-card-media">
+                <img src="video.png" alt="Video Editing Service" loading="lazy">
+              </div>
+              <div class="home-card-body">
+                <p>សេវាកម្មឌីហ្សាញគ្រប់ប្រភេទ ដែលស្របតាមតម្រូវការ</p>
+              </div>
+            </article>
+
+            <!-- Video -->
+            <article class="home-card-link" role="button" tabindex="0"
+                     data-go-panel="service" data-scroll="#videoSection"
+                     aria-label="ទៅកាន់សេវាកម្ម Video Editing">
+              <div class="home-card-media">
+                <img src="license.png" alt="Video Editing Service" loading="lazy">
+              </div>
+              <div class="home-card-body">
+                <p>កាត់តវីដេអូ សម្រាប់ផ្សព្វផ្សាយជំរុញអាជីវកម្មរបស់អ្នក</p>
+              </div>
+            </article>
+          </div>
+        </section>
+
+      </div>
+    </div>
+
+    <!-- Panel 1: Store (existing) -->
+    <div class="panel" id="store">
+      <div class="banner-top"></div>
+      <div class="box">
+        <div class="item product-open" data-product="canva_pro" role="button" tabindex="0">
+          <img src="p1.jpg" alt="Canva Pro Premium">
+          <div class="info"><h3>Canva Pro</h3><p><span>$5.00</span> | គម្រោងមួយឆ្នាំ</p></div>
+        </div>
+        <div class="item product-open" data-product="capcut_pro" role="button" tabindex="0">
+          <img src="p9.jpg" alt="CapCut Pro">
+          <div class="info"><h3>CapCut Pro</h3><p><span>$2.99</span> | គម្រោងមួយខែ</p></div>
+        </div>
+        <!-- <div class="item product-open" data-product="adobe_creative" role="button" tabindex="0">
+          <img src="p7.jpg" alt="Adobe Creative">
+          <div class="info"><h3>Adobe Creative</h3><p><span>$10.00</span> | គម្រោង៣ខែ</p></div>
+        </div> -->
+        <div class="item product-open" data-product="chatgpt_plus" role="button" tabindex="0">
+          <img src="p2.jpg" alt="ChatGPT Plus">
+          <div class="info"><h3>ChatGPT Plus</h3><p><span>$4.99</span> | គម្រោងមួយខែ</p></div>
+        </div>
+        <div class="item product-open" data-product="windows_11_pro" role="button" tabindex="0">
+          <img src="p3.jpg" alt="Windows 11 Pro">
+          <div class="info"><h3>Windows 11 Pro</h3><p><span>$5.00</span> | គម្រោងមួយជីវិត</p></div>
+        </div>
+        <div class="item product-open" data-product="netflix_premium" role="button" tabindex="0">
+          <img src="p5.jpg" alt="Netflix Premium">
+          <div class="info"><h3>Netflix Premium</h3><p><span>$3.00</span> | គម្រោងប្រចាំខែ</p></div>
+        </div>
+        <!-- <div class="item product-open" data-product="google_drive_2tb" role="button" tabindex="0">
+          <img src="p4.jpg" alt="Google Drive 2TB">
+          <div class="info"><h3>Gemini Pro</h3><p><span>$9.00</span> | គម្រោងមួយឆ្នាំ</p></div>
+        </div> -->
+        <div class="item product-open" data-product="youtube_premium" role="button" tabindex="0">
+          <img src="p6.jpg" alt="YouTube Premium">
+          <div class="info"><h3>YouTube Premium</h3><p><span>$20.00</span> | គម្រោងមួយឆ្នាំ</p></div>
+        </div>
+        <div class="item product-open" data-product="microsoft_office" role="button" tabindex="0">
+          <img src="p8.jpg" alt="Microsoft Office 365">
+          <div class="info"><h3>Microsoft Office</h3><p><span>$20.00</span> | គម្រោងមួយឆ្នាំ</p></div>
+        </div>
+        <div class="item product-open" data-product="microsoft_office" role="button" tabindex="0">
+          <img src="p10.jpg" alt="Microsoft Office 365">
+          <div class="info"><h3>Express VPN</h3><p><span>$20.00</span> | គម្រោងមួយឆ្នាំ</p></div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Panel 2: Service (existing) -->
+    <div class="panel" id="service">
+      <div class="service-banner">
+        <img id="randomBanner" src="" alt="Service Banner">
+      </div>
+      <div class="banner-indicators">
+        <span class="dot active"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+      </div>
+      <div class="text-tab3"><p>ទាំងនេះជាការរចនារបស់យើង</p></div>
+      <section class="last-works">
+        <div class="works-grid">
+          <img src="Design (25).jpg" alt="Work 5" loading="lazy">
+          <img src="Design (1).jpg" alt="">
+          <img src="Design (2).jpg" alt="Work 5" loading="lazy">
+          <img src="Design (3).jpg" alt="work 20" loading="lazy">
+          <img src="Design (4).jpg" alt="Work 6" loading="lazy">
+          <img src="Design (5).jpg" alt="Work 1" loading="lazy">
+          <img src="Design (6).jpg" alt="Work 2" loading="lazy">
+          <img src="Design (7).jpg" alt="Work 3" loading="lazy">
+          <img src="Design (8).jpg" alt="Work 4" loading="lazy">
+          <img src="Design (9).jpg" alt="Work 5" loading="lazy">
+          <img src="Design (10).jpg" alt="Work 6" loading="lazy">
+          <img src="Design (11).jpg" alt="Work 7" loading="lazy">
+          <img src="Design (12).jpg" alt="Work 8" loading="lazy">
+          <img src="Design (13).jpg" alt="Work 9" loading="lazy">
+          <img src="Design (14).jpg" alt="Work 10" loading="lazy">
+          <img src="Design (15).jpg" alt="Work 11" loading="lazy">
+          <img src="Design (16).jpg" alt="Work 12" loading="lazy">
+          <img src="Design (17).jpg" alt="Work 13" loading="lazy">
+          <img src="Design (18).jpg" alt="Work 14" loading="lazy">
+          <img src="Design (19).jpg" alt="Work 15" loading="lazy">
+          <img src="Design (20).jpg" alt="Work 16" loading="lazy">
+          <img src="Design (21).jpg" alt="Work 17" loading="lazy">
+          <img src="Design (22).jpg" alt="Work 18" loading="lazy">
+          <img src="Design (23).jpg" alt="Work 19" loading="lazy">
+          <img src="Design (24).jpg" alt="Work 20" loading="lazy">
+        </div>
+      </section>
+    </div>
+
+  </div>
+
+  <!-- Product modal (sheet) -->
+  <div class="product-modal" id="productModal" aria-hidden="true">
+    <div class="pm-backdrop" data-close="1" aria-hidden="true"></div>
+    <div class="pm-dialog" role="dialog" aria-modal="true" aria-label="Product detail">
+      <button class="pm-close" type="button" aria-label="Close"><span><img src="backicon.png" alt="" style="width: 21px;"></span></button>
+      <div class="pm-content">
+        <div id="pmContent" class="content-store"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Scroll to Top Button -->
+   <a href="https://t.me/smservicekh" target="_blank" rel="noopener" aria-label="Contact us on Telegram">
+    <button class="scroll-to-top" type="button" aria-label="Scroll to top" style="display: none;">
+      <img src="scrollup.png" alt="Scroll up" />
+    </button>
+   </a>
+  
+
+  <script src="app.js"></script>
 </body>
 </html>
