--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="km">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>SM Digital</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="headlogo.png" type="image/png" />
