--- a/index.html
+++ b/index.html
@@ -33,80 +33,20 @@
   <div class="panel-container">
     <div id="overlay"></div>
 
-    <!-- ✅ Panel: Home (Enhanced with Search + Featured Apps) -->
+    <!-- ✅ Panel 1: Home -->
     <div class="panel" id="home">
       <div class="home-wrap home-full">
-        <!-- Search Box Section -->
-        <section class="home-search-section">
-          <div class="search-container">
-            <input 
-              type="text" 
-              id="homeSearchInput" 
-              class="search-input" 
-              placeholder="Search Service or License..."
-              aria-label="Search apps and services"
-            />
-            <button class="search-btn" id="homeSearchBtn" type="button" aria-label="Search">
-              <img src="searchicon.png" alt="Search" />
-            </button>
-          </div>
-        </section>
-
+        <center>
+          <img src="chinese new year copy.png" alt="">
+        </center>
         
-
-        <!-- Featured Apps (5 per row) -->
-        <section class="home-featured-apps">
-          <div class="featured-apps-grid" id="featuredAppsGrid">
-            <!-- Apps populated by JavaScript -->
-          </div>
-        </section>
-
-        <!-- Service Cards (3 columns) -->
-        <section class="home-services">
-
-          <div class="home-cards">
-            <!-- Design -->
-            <article class="home-card-link" role="button" tabindex="0"
-                     data-go-panel="service" data-scroll="#designSection"
-                     aria-label="ទៅកាន់សេវាកម្ម Design">
-              <div class="home-card-media">
-                <img src="design.png" alt="Design Service" loading="lazy">
-              </div>
-              <div class="home-card-body">
-                <p>ឡាយសិនកម្មវិធីលំដាប់ខ្ពស់ ការធានាគុណភាព</p>
-              </div>
-            </article>
-
-            <!-- Video -->
-            <article class="home-card-link" role="button" tabindex="0"
-                     data-go-panel="service" data-scroll="#videoSection"
-                     aria-label="ទៅកាន់សេវាកម្ម Video Editing">
-              <div class="home-card-media">
-                <img src="video.png" alt="Video Editing Service" loading="lazy">
-              </div>
-              <div class="home-card-body">
-                <p>សេវាកម្មឌីហ្សាញគ្រប់ប្រភេទ ដែលស្របតាមតម្រូវការ</p>
-              </div>
-            </article>
-
-            <!-- Video -->
-            <article class="home-card-link" role="button" tabindex="0"
-                     data-go-panel="service" data-scroll="#videoSection"
-                     aria-label="ទៅកាន់សេវាកម្ម Video Editing">
-              <div class="home-card-media">
-                <img src="license.png" alt="Video Editing Service" loading="lazy">
-              </div>
-              <div class="home-card-body">
-                <p>កាត់តវីដេអូ សម្រាប់ផ្សព្វផ្សាយជំរុញអាជីវកម្មរបស់អ្នក</p>
-              </div>
-            </article>
-          </div>
-        </section>
-
       </div>
     </div>
 
-    <!-- Panel 1: Store (existing) -->
+
+
+
+    <!-- Panel 2: Store (existing) -->
     <div class="panel" id="store">
       <div class="banner-top"></div>
       <div class="box">
@@ -118,10 +58,6 @@
           <img src="p9.jpg" alt="CapCut Pro">
           <div class="info"><h3>CapCut Pro</h3><p><span>$2.99</span> | គម្រោងមួយខែ</p></div>
         </div>
-        <!-- <div class="item product-open" data-product="adobe_creative" role="button" tabindex="0">
-          <img src="p7.jpg" alt="Adobe Creative">
-          <div class="info"><h3>Adobe Creative</h3><p><span>$10.00</span> | គម្រោង៣ខែ</p></div>
-        </div> -->
         <div class="item product-open" data-product="chatgpt_plus" role="button" tabindex="0">
           <img src="p2.jpg" alt="ChatGPT Plus">
           <div class="info"><h3>ChatGPT Plus</h3><p><span>$4.99</span> | គម្រោងមួយខែ</p></div>
@@ -134,10 +70,6 @@
           <img src="p5.jpg" alt="Netflix Premium">
           <div class="info"><h3>Netflix Premium</h3><p><span>$3.00</span> | គម្រោងប្រចាំខែ</p></div>
         </div>
-        <!-- <div class="item product-open" data-product="google_drive_2tb" role="button" tabindex="0">
-          <img src="p4.jpg" alt="Google Drive 2TB">
-          <div class="info"><h3>Gemini Pro</h3><p><span>$9.00</span> | គម្រោងមួយឆ្នាំ</p></div>
-        </div> -->
         <div class="item product-open" data-product="youtube_premium" role="button" tabindex="0">
           <img src="p6.jpg" alt="YouTube Premium">
           <div class="info"><h3>YouTube Premium</h3><p><span>$20.00</span> | គម្រោងមួយឆ្នាំ</p></div>
