--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="panel" id="home">
       <div class="home-wrap home-full">
         <center>
-          <img src="chinese new year copy.png" alt="">
+          <img src="cny.jpg" alt="">
         </center>
         
       </div>
