--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
 
     <!-- ✅ Panel 1: Home -->
     <div class="panel" id="home">
-      <div class="home-wrap home-full">
+      <div class="Home-content">
         <center>
           <img src="cny.jpg" alt="">
+           <img src="design.jpg" alt="">
+           <img src="video.jpg" alt="">
+            <img src="license.jpg" alt="">
+            <p>@2022-2026 All Rights Reserved by SM Digital</p>
         </center>
         
       </div>
