--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
     </div>
   </header>
 
-  <div id="panelOverlay"></div>
-
   <div class="panel-container">
-    <div id="overlay"></div>
-
     <!-- ✅ Panel 1: Home -->
     <div class="panel" id="home">
       <div class="Home-content">
@@ -40,16 +36,12 @@
            <img src="design.jpg" alt="">
            <img src="video.jpg" alt="">
             <img src="license.jpg" alt="">
-            <p >@2022-2026 All Rights Reserved by SM Digital</p>
+            <p>@2022-2026 All Rights Reserved by SM Digital</p>
         </center>
-        
       </div>
     </div>
 
-
-
-
-    <!-- Panel 2: Store (existing) -->
+    <!-- Panel 2: Store -->
     <div class="panel" id="store">
       <div class="banner-top"></div>
       <div class="box">
@@ -81,14 +73,14 @@
           <img src="p8.jpg" alt="Microsoft Office 365">
           <div class="info"><h3>Microsoft Office</h3><p><span>$20.00</span> | គម្រោងមួយឆ្នាំ</p></div>
         </div>
-        <div class="item product-open" data-product="microsoft_office" role="button" tabindex="0">
-          <img src="p10.jpg" alt="Microsoft Office 365">
+        <div class="item product-open" data-product="express_vpn" role="button" tabindex="0">
+          <img src="p10.jpg" alt="Express VPN">
           <div class="info"><h3>Express VPN</h3><p><span>$20.00</span> | គម្រោងមួយឆ្នាំ</p></div>
         </div>
       </div>
     </div>
 
-    <!-- Panel 2: Service (existing) -->
+    <!-- Panel 3: Service -->
     <div class="panel" id="service">
       <div class="service-banner">
         <img id="randomBanner" src="" alt="Service Banner">
@@ -129,7 +121,6 @@
         </div>
       </section>
     </div>
-
   </div>
 
   <!-- Product modal (sheet) -->
@@ -144,12 +135,11 @@
   </div>
 
   <!-- Scroll to Top Button -->
-   <a href="https://t.me/smservicekh" target="_blank" rel="noopener" aria-label="Contact us on Telegram">
+  <a href="https://t.me/smservicekh" target="_blank" rel="noopener" aria-label="Contact us on Telegram">
     <button class="scroll-to-top" type="button" aria-label="Scroll to top" style="display: none;">
       <img src="scrollup.png" alt="Scroll up" />
     </button>
-   </a>
-  
+  </a>
 
   <script src="app.js"></script>
 </body>
